feat: EDA 분석 및 데이터 샘플링 완료

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,9 @@ service-account-key.json
 
 # ==================== claude ====================
 .claude/
+
+# ==================== backup ====================
+backup/
+
+# ==================== vent ====================
+venv/
