--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ Thumbs.db
 .env.local
 .env.*.local
 .env.prod
+.env.development
+.env.production
 
 # ==================== Data (Git에 올리지 않음) ====================
 # 원본 데이터 (용량이 크므로)
@@ -42,6 +44,8 @@ data/raw/*.gz
 data/raw/*.csv
 data/processed/*.csv
 data/**/*.csv
+# 추가 (sample만 허용)
+!data/sample/*.csv
 
 # Flink 체크포인트 (로컬 상태)
 data/checkpoints/
