--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,15 @@ attrs==25.4.0
 babel==2.17.0
 beautifulsoup4==4.14.3
 bleach==6.3.0
+cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 colorama==0.4.6
 comm==0.2.3
+confluent-kafka==2.12.2
 contourpy==1.3.2
+coverage==7.13.0
 cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
@@ -27,6 +30,7 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 ipykernel==7.1.0
 ipython==8.37.0
 ipywidgets==8.1.8
@@ -50,6 +54,7 @@ jupyterlab==4.5.0
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
 jupyterlab_widgets==3.0.16
+kafka-python==2.3.0
 kiwisolver==1.4.9
 lark==1.3.1
 MarkupSafe==3.0.3
@@ -70,6 +75,7 @@ pandocfilters==1.5.1
 parso==0.8.5
 pillow==12.0.0
 platformdirs==4.5.1
+pluggy==1.6.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psutil==7.1.3
@@ -77,7 +83,10 @@ pure_eval==0.2.3
 pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
+pytest==9.0.2
+pytest-cov==7.0.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 python-json-logger==4.0.0
 pytz==2025.2
 pywinpty==3.0.2
