feat: Flink-Kafka 연동 설정 완료
- Docker Compose에 Flink JobManager, TaskManager 구성 추가
- Flink 라이브러리 (Kafka Connector, Kafka Clients JAR) 추가
- PyFlink로 Kafka 메시지 처리 테스트 코드 작성
  * simple_flink_test.py: Kafka 연동 메인 코드
  * test_flink_basic.py: 기본 기능 테스트
  * config.py: Flink 설정 관리
- Dockerfile 수정 (Python 3, requirements 설치)
- requirements.txt 업데이트 (apache-flink 추가)
- docker-compose.yml 업데이트 (Flink 서비스 및 PyFlink Job 추가)
- .gitignore 업데이트 (JAR 파일 제외, 스크립트 포함)

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,15 @@ pgdata/
 docker-compose.override.yml
 .dockerignore
 
+# ==================== Flink & Java ====================
+# JAR 파일은 무시하지만 setup 스크립트는 추적
+flink/lib/*.jar
+!flink/lib/setup-flink.sh
+!flink/lib/.gitkeep
+*.jar
+target/
+*.class
+
 # ==================== Airflow ====================
 airflow/logs/
 airflow/dags/__pycache__/
@@ -132,6 +141,8 @@ service-account-key.json
 # ==================== backup ====================
 backup/
 
-# ==================== vent ====================
+# ==================== vent ======================
 venv/
 
+# ==================== .vscode ===================
+.vscode/
