feat: 모니터링 인프라 재구성 (Prometheus, JMX Exporter)
- docker-compose.monitoring.yml 작성
- Prometheus scrape 설정 정리 (Kafka, Zookeeper, Flink, Schema Registry)
- JMX Exporter 설정 정리
- 모니터링 스택 가이드 문서화
  * Kafka Overview 대시보드 (consumer lag, throughput)
  * Flink Overview 대시보드 (checkpoint, backpressure)
  * JVM Metrics 대시보드 (heap, GC, thread)
- 불필요한 레거시 설정 삭제 (docker-compose.yml, grafana 설정)

--- a/monitoring/jmx-exporter/config.yml
+++ b/monitoring/jmx-exporter/config.yml
@@ -1,186 +1,7 @@
----
-# Kafka Broker JMX 연결 설정
-# Docker gateway IP 사용 (기본값: 172.17.0.1)
-hostPort: 172.17.0.1:9101
-
+startDelaySeconds: 0
+hostPort: broker:9101
+ssl: false
 lowercaseOutputName: true
 lowercaseOutputLabelNames: true
-
-# Kafka Broker JMX 메트릭 설정
-# Kafka brokers expose metrics via JMX
 rules:
-  # ============================================================
-  # Broker Metrics (브로커 상태)
-  # ============================================================
-  - pattern: "kafka.server<type=(.+), name=(.+), clientId=(.+), topic=(.+), partition=(.*)><>Value"
-    name: kafka_server_$1_$2
-    type: GAUGE
-    labels:
-      clientId: "$3"
-      topic: "$4"
-      partition: "$5"
-
-  - pattern: "kafka.server<type=(.+), name=(.+), clientId=(.+), brokerHost=(.+), brokerPort=(.+)><>Value"
-    name: kafka_server_$1_$2
-    type: GAUGE
-    labels:
-      clientId: "$3"
-      broker: "$4:$5"
-
-  - pattern: "kafka.server<type=(.+), name=(.+)><>Value"
-    name: kafka_server_$1_$2
-    type: GAUGE
-
-  - pattern: "kafka.server<type=(.+), name=(.+), clientId=(.+), topic=(.+)><>Count"
-    name: kafka_server_$1_$2_total
-    type: COUNTER
-    labels:
-      clientId: "$3"
-      topic: "$4"
-
-  - pattern: "kafka.server<type=(.+), name=(.+), clientId=(.+), topic=(.+)><>OneMinuteRate"
-    name: kafka_server_$1_$2_one_minute_rate
-    type: GAUGE
-    labels:
-      clientId: "$3"
-      topic: "$4"
-
-  - pattern: "kafka.server<type=(.+), name=(.+)><>Count"
-    name: kafka_server_$1_$2_total
-    type: COUNTER
-
-  - pattern: "kafka.server<type=(.+), name=(.+)><>OneMinuteRate"
-    name: kafka_server_$1_$2_one_minute_rate
-    type: GAUGE
-
-  # ============================================================
-  # Network Metrics (네트워크 성능)
-  # ============================================================
-  - pattern: "kafka.network<type=(.+), name=(.+)><>Value"
-    name: kafka_network_$1_$2
-    type: GAUGE
-
-  - pattern: "kafka.network<type=(.+), name=(.+)><>Count"
-    name: kafka_network_$1_$2_total
-    type: COUNTER
-
-  - pattern: "kafka.network<type=(.+), name=(.+)><>OneMinuteRate"
-    name: kafka_network_$1_$2_one_minute_rate
-    type: GAUGE
-
-  # ============================================================
-  # Controller Metrics (컨트롤러 상태)
-  # ============================================================
-  - pattern: "kafka.controller<type=(.+), name=(.+)><>Value"
-    name: kafka_controller_$1_$2
-    type: GAUGE
-
-  - pattern: "kafka.controller<type=(.+), name=(.+)><>Count"
-    name: kafka_controller_$1_$2_total
-    type: COUNTER
-
-  # ============================================================
-  # ReplicaManager Metrics (리플리케이션)
-  # ============================================================
-  - pattern: "kafka.server<type=ReplicaManager, name=(.+)><>Value"
-    name: kafka_server_replicamanager_$1
-    type: GAUGE
-
-  - pattern: "kafka.server<type=ReplicaManager, name=(.+)><>Count"
-    name: kafka_server_replicamanager_$1_total
-    type: COUNTER
-
-  # ============================================================
-  # Group Coordinator Metrics (컨슈머 그룹)
-  # ============================================================
-  - pattern: "kafka.server<type=GroupCoordinator, name=(.+)><>Value"
-    name: kafka_server_groupcoordinator_$1
-    type: GAUGE
-
-  - pattern: "kafka.server<type=GroupCoordinator, name=(.+)><>Count"
-    name: kafka_server_groupcoordinator_$1_total
-    type: COUNTER
-
-  # ============================================================
-  # Delayed Operation Metrics (지연 작업)
-  # ============================================================
-  - pattern: "kafka.server<type=DelayedOperationPurgatory, name=(.+), clientId=(.+)><>Value"
-    name: kafka_server_delayedoperation_$1
-    type: GAUGE
-    labels:
-      clientId: "$2"
-
-  # ============================================================
-  # JVM Metrics (자바 성능)
-  # ============================================================
-  - pattern: "java.lang<type=Memory><HeapMemoryUsage>(.+)"
-    name: jvm_memory_heap_$1
-    type: GAUGE
-
-  - pattern: "java.lang<type=Memory><NonHeapMemoryUsage>(.+)"
-    name: jvm_memory_nonheap_$1
-    type: GAUGE
-
-  - pattern: "java.lang<type=GarbageCollector, name=(.+)><CollectionCount>"
-    name: jvm_gc_collection_count_total
-    type: COUNTER
-    labels:
-      gc: "$1"
-
-  - pattern: "java.lang<type=GarbageCollector, name=(.+)><CollectionTime>"
-    name: jvm_gc_collection_time_ms_total
-    type: COUNTER
-    labels:
-      gc: "$1"
-
-  - pattern: "java.lang<type=Runtime><(.+)>"
-    name: jvm_runtime_$1
-    type: GAUGE
-
-  - pattern: "java.lang<type=Threading><(.+)>"
-    name: jvm_threads_$1
-    type: GAUGE
-
-  # ============================================================
-  # Topic Metrics (토픽별 메트릭)
-  # ============================================================
-  - pattern: "kafka.server<type=BrokerTopicMetrics, name=(.+), topic=(.+)><>OneMinuteRate"
-    name: kafka_server_brokertopicmetrics_$1_one_minute_rate
-    type: GAUGE
-    labels:
-      topic: "$2"
-
-  - pattern: "kafka.server<type=BrokerTopicMetrics, name=(.+), topic=(.+)><>Count"
-    name: kafka_server_brokertopicmetrics_$1_total
-    type: COUNTER
-    labels:
-      topic: "$2"
-
-  - pattern: "kafka.server<type=BrokerTopicMetrics, name=(.+)><>OneMinuteRate"
-    name: kafka_server_brokertopicmetrics_$1_one_minute_rate
-    type: GAUGE
-
-  - pattern: "kafka.server<type=BrokerTopicMetrics, name=(.+)><>Count"
-    name: kafka_server_brokertopicmetrics_$1_total
-    type: COUNTER
-
-  # ============================================================
-  # Catch-all (기타 메트릭)
-  # ============================================================
-  - pattern: "kafka.(.+)<type=(.+), name=(.+), clientId=(.+), topic=(.+), partition=(.*)><>Value"
-    name: kafka_$1_$2_$3
-    type: GAUGE
-    labels:
-      clientId: "$4"
-      topic: "$5"
-      partition: "$6"
-
-  - pattern: "kafka.(.+)<type=(.+), name=(.+), clientId=(.+)><>Value"
-    name: kafka_$1_$2_$3
-    type: GAUGE
-    labels:
-      clientId: "$4"
-
-  - pattern: "kafka.(.+)<type=(.+), name=(.+)><>Value"
-    name: kafka_$1_$2_$3
-    type: GAUGE
+  - pattern: ".*"
