--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ venv/
 
 # ==================== .vscode ===================
 .vscode/
+
+# ==================== database(local_mount) ===================
+pgdata/
