--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,28 @@ services:
     networks:
       - marketing_network
 
+# ============================================================
+# POSTGRES
+# ============================================================
+  postgres:
+    container_name: "postgres"
+    image: postgres:15
+    ports:
+      - "5432:5432"
+    expose:
+      - "5432"
+    volumes:
+      - "c:\\Users\\PC\\Desktop\\DEP\\marketing_roas\\pgdata:/var/lib/postgresql/data"
+      - "./schemas/realtime_ctr_metrics.sql:/docker-entrypoint-initdb.d/01-realtime_schema.sql"
+    environment:
+      - "POSTGRES_DB=${POSTGRES_DB}"
+      - "POSTGRES_USER=${POSTGRES_USER}"
+      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+      - "PGDATA=/var/lib/postgresql/data/pgdata"
+    networks:
+      - marketing_network
+
+
 
   # Redis
   # Airflow
