feat: Flink CTR 스트리밍 파이프라인 구현 (Avro 기반)
- PostgreSQL 스키마: 원본 이벤트 + 1분/5분 메트릭 테이블
- 데이터 보관 정책: 자동 정리 함수 (cleanup_old_events, optimize_tables)
- Docker 설정: PostgreSQL, networks, init script 연동
- Flink 구현: Avro 디코더, Kafka Consumer, Tumbling Window 집계
- Unit Tests: 48개 테스트 (models, config, avro)
- 설정 정리: pyproject.toml 단독 관리, conftest 계층화

--- a/flink/requirements.txt
+++ b/flink/requirements.txt
@@ -1,2 +1,37 @@
+# ============================================================
+# Flink
+# ============================================================
 apache-flink==1.17.1
 apache-flink-libraries==1.17.1
+
+# ============================================================
+# Kafka & Schema Registry (Avro)
+# ============================================================
+confluent-kafka==2.3.0
+fastavro==1.8.4
+requests==2.31.0
+
+# ============================================================
+# PostgreSQL
+# ============================================================
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
+
+# ============================================================
+# Data Processing & Utils
+# ============================================================
+numpy==1.24.3
+pandas==2.1.0
+python-dotenv==1.0.0
+
+# ============================================================
+# Logging & Monitoring
+# ============================================================
+python-json-logger==2.0.7
+
+# ============================================================
+# Testing
+# ============================================================
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-mock==3.12.0
